tests/ui/consts/miri_unleashed/const_refers_to_static.32bit.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/const_refers_to_static.rs:9:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ calling non-const function `AtomicUsize::fetch_add`

error[E0080]: evaluation of constant value failed
  --> $DIR/const_refers_to_static.rs:14:14
   |
LL |     unsafe { *(&FOO as *const _ as *const usize) }
   |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ constant accesses mutable global memory

error[E0080]: evaluation of constant value failed
  --> $DIR/const_refers_to_static.rs:18:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^ constant accesses mutable global memory

warning: skipping const checks
   |
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static.rs:9:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^
help: skipping check that does not even have a feature gate
  --> $DIR/const_refers_to_static.rs:9:5
   |
LL |     FOO.fetch_add(1, Ordering::Relaxed)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static.rs:14:17
   |
LL |     unsafe { *(&FOO as *const _ as *const usize) }
   |                 ^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static.rs:18:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static.rs:18:32
   |
LL | const READ_MUT: u32 = unsafe { MUTABLE };
   |                                ^^^^^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static.rs:23:18
   |
LL |     unsafe { &*(&FOO as *const _ as *const usize) }
   |                  ^^^
help: skipping check for `const_refs_to_static` feature
  --> $DIR/const_refers_to_static.rs:27:25
   |
LL | const REF_IMMUT: &u8 = &MY_STATIC;
   |                         ^^^^^^^^^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0080`.
